--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ nav select {
 
 .form {
     position: relative;
+    width: 100%;
     z-index: 1;
 }
 
@@ -118,7 +119,8 @@ nav select {
 
 .input {
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px 50px;
+    padding: 10px;
+    width: 20%;
     border-radius: 4px;
     outline: none;
     border: none;
@@ -136,7 +138,7 @@ nav select {
 }
 
 .form .btn-start {
-    padding: 11px 15px;
+    padding: 10px 15px;
     cursor: pointer;
 }
 
@@ -213,7 +215,7 @@ nav select {
     padding: 10px 50px;
     font-size: 1.1rem;
     transition: all 300ms;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 .faqbox:hover {
@@ -238,6 +240,17 @@ nav select {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.email-content .form .input {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    width: 70%;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    border: 1px solid rgba(196, 196, 196, 0.5);
+    font-weight: bold;
 }
 
 
